--- a/Checklists4/Base.lproj/Main.storyboard
+++ b/Checklists4/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ynq-Yq-lbo" id="Wks-jf-aCb">
-                                    <rect key="frame" x="0.0" y="0.0" width="336" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="336" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnZ-8b-wv6">
@@ -44,7 +44,7 @@
                     <navigationItem key="navigationItem" title="Checklists" id="VAf-uU-1E1">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="3eX-3f-HWn">
                             <connections>
-                                <segue destination="RUW-WG-dFi" kind="presentation" id="cXk-JX-STx"/>
+                                <segue destination="RUW-WG-dFi" kind="presentation" identifier="AddItem" id="cXk-JX-STx"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
