--- a/Checklists4/Base.lproj/Main.storyboard
+++ b/Checklists4/Base.lproj/Main.storyboard
@@ -10,6 +10,28 @@
     </dependencies>
     <scenes>
         <!--Checklists-->
+        <scene sceneID="vNR-JN-7SS">
+            <objects>
+                <tableViewController id="CDI-8g-K4B" customClass="AllListsViewController" customModule="Checklists4" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="bVp-9a-OP3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <connections>
+                            <outlet property="dataSource" destination="CDI-8g-K4B" id="f6y-TZ-KkX"/>
+                            <outlet property="delegate" destination="CDI-8g-K4B" id="YEA-QO-Ozg"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Checklists" id="1fU-oO-1jl"/>
+                    <connections>
+                        <segue destination="EmK-Gf-AJs" kind="show" identifier="ShowChecklist" id="RrS-Ck-4Z2"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1ro-5i-780" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1209" y="-720"/>
+        </scene>
+        <!--(Name of Checklist)-->
         <scene sceneID="eM0-b2-a5s">
             <objects>
                 <tableViewController id="EmK-Gf-AJs" customClass="ChecklistViewController" customModule="Checklists4" customModuleProvider="target" sceneMemberID="viewController">
@@ -22,7 +44,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ynq-Yq-lbo" id="Wks-jf-aCb">
-                                    <rect key="frame" x="0.0" y="0.0" width="308" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="308" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnZ-8b-wv6">
@@ -51,7 +73,7 @@
                             <outlet property="delegate" destination="EmK-Gf-AJs" id="jD9-KD-iuH"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Checklists" id="VAf-uU-1E1">
+                    <navigationItem key="navigationItem" title="(Name of Checklist)" id="VAf-uU-1E1">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="3eX-3f-HWn">
                             <connections>
                                 <segue destination="RUW-WG-dFi" kind="presentation" identifier="AddItem" id="cXk-JX-STx"/>
@@ -78,7 +100,7 @@
                                         <rect key="frame" x="0.0" y="35" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fck-pS-64Z" id="IWI-Pk-PRx">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name of the Item" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j3d-he-uOl">
@@ -135,12 +157,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="EmK-Gf-AJs" kind="relationship" relationship="rootViewController" id="7f1-sh-PNh"/>
+                        <segue destination="CDI-8g-K4B" kind="relationship" relationship="rootViewController" id="1Qy-5m-IyR"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B4q-3o-HA4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="269.60000000000002" y="129.98500749625188"/>
+            <point key="canvasLocation" x="276" y="-720"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6DZ-pd-1jB">
